# BeatSinger

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  continue  mod.template.json  qpm.json  qpm.shared.json
.github/actions/setup-qpm/: action.yml
.github/workflows/: ci.yml  qmod-artifact.yml  security.yml
include/BeatSinger/: Config.hpp  HttpLyricsProvider.hpp  LevelInfo.hpp  LocalFileLyricsProvider.hpp  Logger.hpp  LyricsController.hpp  LyricsParser.hpp  LyricsProvider.hpp  SettingsViewController.hpp  Subtitle.hpp
src/: Config.cpp  HttpLyricsProvider.cpp  LevelInfo.cpp  LocalFileLyricsProvider.cpp  Logger.cpp  LyricsController.cpp  LyricsParser.cpp  LyricsProvider.cpp  SettingsViewController.cpp  main.cpp
